--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,16 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<main>
+  <div class="container">
+    <div class="row">
+      <div>
+        <h1>Let's see beautiful world!!</h1>
+        <h3>We are completely ready to travel abroad!!</h3>
+        <p>In travel tips,<br>
+        You can find many tips to enjoy foreigin countries.</p>
+        <p>I'm really happy if you remove worries to go abroad and enjoy your trip!</p>
+        <p>Traveling abroad is really exciting!!<br>
+        Let's get started!!</p>
+        
+      </div>
+    </div>
+  </div>
+</main>
