--- a/app/views/tips/index.html.erb
+++ b/app/views/tips/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Tips#index</h1>
-<p>Find me in app/views/tips/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div>
+      <h1>Unitead States of America</h1>
+      <h3>Manners</h3>
+      <h3>Transformation</h3>
+      
+    </div>
+    <div>
+      <
+    </div>
+  </div>
+</div>
